added Weaviate CRUD
